--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 
 <body>
-    <div id="score"></div>
+    <header>
+        <h1 class="score"> Score: 0 </h1>
+    </header>
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
